=======
CHANGES
=======

0.2
===

- Extracted common Resource interface
- reevaluated Python to C-API bridge
- lazy loading of ImageMagick